# game_story_structure

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: test.ipynb  train.ipynb
src/config/experiment/: config.yml
src/utils/: __init__.py  helper_function.py  log_config.py
