[tool.poetry]
name = "story-structure"
version = "0.1.0"
description = ""
authors = ["juliekuo <tzulikuo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
transformers = "^4.47.0"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
accelerate = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
