[tool.poetry]
name = "story-structure"
version = "0.1.0"
description = ""
authors = ["juliekuo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
transformers = "^4.47.0"
accelerate = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
